--- a/src/app/pages/nour/nour.component.html
+++ b/src/app/pages/nour/nour.component.html
@@ -490,21 +490,25 @@
               <cdk-step [optional]="true">
                 <ng-template cdkStepLabel>
                   <span class="number">3.</span>
-                  <span>Rapport</span>
+                  <span  >Rapport</span>
                 </ng-template>
                 <section *ngIf="cdkStepper.selectedIndex === 2">
-                  <div>
-                    <li class="next list-inline-item" aria-disabled="false"><button class="btn btn-primary" cdkStepperNext>Afficher Rapport</button></li>
-
-                
+                  <div *ngIf="isRapportAccessible(timeline[0][2])"> <!-- Vérifiez si le rapport est accessible -->
+                    <li class="next list-inline-item" aria-disabled="false">
+                      <button class="btn btn-primary" cdkStepperNext [disabled]="!isRapportAccessible(timeline[0][2])">Afficher Rapport</button>
+                    </li>
                   </div>
-  
+                  <div *ngIf="!isRapportAccessible(timeline[0][2])">
+                    <p>Le rapport n'est pas encore disponible. Veuillez patienter jusqu'à la date de dépôt.</p>
+                  </div>
+                  <!-- Autres éléments du formulaire ici -->
                   <ul class="list-inline wizard d-flex justify-content-end mb-0">
                     <li class="previous list-inline-item" aria-disabled="true"><button class="btn btn-primary" cdkStepperPrevious>Previous</button></li>
                     <li class="next list-inline-item" aria-disabled="false"><button class="btn btn-primary" cdkStepperNext>Next</button></li>
                   </ul>
                 </section>
               </cdk-step>
+              
   
               <cdk-step [optional]="true">
                 <ng-template cdkStepLabel>
@@ -512,65 +516,59 @@
                   <span>Attestation</span>
                 </ng-template>
                 <section *ngIf="cdkStepper.selectedIndex === 3">
-                  <div class="card-body">
-                  
-                    <div class="table-responsive">
-                      <table class="table align-middle dt-responsive nowrap w-100 table-check" id="job-list">
-                        <thead>
-                          <tr>
-                            <th scope="col">Nom_Etudiant</th>
-                            <th scope="col">Prenom_Etudiant</th>
-                       
-                          
-                            
-                            <th scope="col">Action</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr  *ngFor="let student of students">
-                            <th scope="row"  >{{ student.firstName }}</th>
-                            <td> {{ student.lastName }} </td>
-                      
-                           
-                           
-                          
-                            <td>
-                              <ul class="list-unstyled hstack gap-1 mb-0">
-                                <li data-bs-toggle="tooltip" data-bs-placement="top" title="View">
-                                 
-                                  <a class="btn btn-sm btn-soft-primary"(click)="redirectToAttestationStage(student)">
-                                    
-                                    <i class="mdi mdi-eye-outline"></i>
-
-                                  </a>
-                                </li>
-                              
-                              </ul>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                    <div class="row justify-content-between align-items-center">
-                      <div class="col-auto me-auto">
+                  <!-- Vérifiez si la date de dépôt d'attestation est arrivée -->
+                  <div *ngIf="isAttestationAccessible(timeline[0][3])">
+                    <div class="card-body">
+                      <div class="table-responsive">
+                        <table class="table align-middle dt-responsive nowrap w-100 table-check" id="job-list">
+                          <thead>
+                            <tr>
+                              <th scope="col">Nom_Etudiant</th>
+                              <th scope="col">Prenom_Etudiant</th>
+                              <th scope="col">Action</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr *ngFor="let student of students">
+                              <th scope="row">{{ student.firstName }}</th>
+                              <td>{{ student.lastName }}</td>
+                              <td>
+                                <ul class="list-unstyled hstack gap-1 mb-0">
+                                  <li data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+                                    <a class="btn btn-sm btn-soft-primary" (click)="redirectToAttestationStage(student)">
+                                      <i class="mdi mdi-eye-outline"></i>
+                                    </a>
+                                  </li>
+                                </ul>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
                       </div>
-                      <div class="col-auto">
-                        <div class="text-md-right float-md-end pagination-rounded">
-                          <ul class="pagination pagination-rounded justify-content-end mb-2">
-                          </ul>
+                      <div class="row justify-content-between align-items-center">
+                        <div class="col-auto me-auto">
+                        </div>
+                        <div class="col-auto">
+                          <div class="text-md-right float-md-end pagination-rounded">
+                            <ul class="pagination pagination-rounded justify-content-end mb-2">
+                            </ul>
+                          </div>
                         </div>
                       </div>
-                      <!--end col-->
                     </div>
-                    <!--end row-->
                   </div>
-  
+                  <!-- Si la date d'attestation n'est pas encore arrivée -->
+                  <div *ngIf="!isAttestationAccessible(timeline[0][3])">
+                    <p>L'attestation n'est pas encore disponible. Veuillez patienter jusqu'à la date de dépôt.</p>
+                  </div>
+                  <!-- Autres éléments du formulaire ici -->
                   <ul class="list-inline wizard d-flex justify-content-end mb-0">
                     <li class="previous list-inline-item" aria-disabled="true"><button class="btn btn-primary" cdkStepperPrevious>Previous</button></li>
                     <li class="next list-inline-item" aria-disabled="false"><button class="btn btn-primary" cdkStepperNext>Finish</button></li>
                   </ul>
                 </section>
               </cdk-step>
+              
   
             </ng-stepper>
           </div>
