--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -2,7 +2,7 @@
   <div class="navbar-header">
     <div class="d-flex">
       <!-- LOGO -->
-      <div class="navbar-brand-box">
+      <div class="navbar-brand-box" style="background-color: rgb(156, 158, 159)">
         <a routerLink="/" class="logo logo-dark">
           <span class="logo-sm">
             <img src="assets/images/logo.svg" alt="" height="22">
@@ -13,11 +13,11 @@
         </a>
 
         <a routerLink="/" class="logo logo-light">
-          <span class="logo-sm">
-            <img src="assets/images/logo-light.svg" alt="" height="22">
+          <span class="logo-sm" >
+            <img src="assets/images/esprit.jpg" alt="" height="50">
           </span>
           <span class="logo-lg">
-            <img src="assets/images/logo-light.png" alt="" height="19">
+            <img src="assets/images/esprit.jpg" alt="" height="70">
           </span>
         </a>
       </div>
