--- a/src/app/pages/offrestage/offrestage.component.html
+++ b/src/app/pages/offrestage/offrestage.component.html
@@ -57,7 +57,7 @@
                 <input type="text" class="form-control" id="duree" name="duree" [(ngModel)]="nouvelleOffre.duree" readonly hidden>
               </div>
               <div class="form-group">
-                <label for="hashtags">Hashtags</label>
+                <label for="hashtags">Hashtags(Competences)</label>
                 <input type="text" [(ngModel)]="nouvelleOffre.hashtags" class="form-control" id="hashtags" name="hashtags" placeholder="Séparez les hashtags par des virgules">
                 <small class="form-text text-muted">Séparez les hashtags par des virgules (,)</small>
               </div>
