--- a/src/app/event-scheduler/event-scheduler.component.html
+++ b/src/app/event-scheduler/event-scheduler.component.html
@@ -1,3 +1,5 @@
+<!-- Calendrier FullCalendar -->
 <full-calendar [options]="calendarOptions"></full-calendar>
 
-<button (click)="openCreateEventPopup()">Ajouter un événement</button>
+<!-- Bouton pour ouvrir la boîte de dialogue d'ajout d'événement -->
+<button mat-raised-button color="primary" (click)="openCreateEventPopup()">Ajouter un événement</button>
