--- a/src/app/pages/gerernote/gerernote.component.html
+++ b/src/app/pages/gerernote/gerernote.component.html
@@ -315,7 +315,7 @@
           <thead class="table-light">
             <tr>
               <th>
-                Note Encadrant Académique = (Note RDV Pédagogiques * 80% + Note
+                Note Encadrement Académique = (Note RDV Pédagogiques * 80% + Note
                 Appréciation Globale * 20% )
               </th>
             </tr>
