--- a/src/app/pages/listeoffreencadrant/listeoffreencadrant.component.html
+++ b/src/app/pages/listeoffreencadrant/listeoffreencadrant.component.html
@@ -34,14 +34,14 @@
               <thead>
                 <tr>
                 
-                  <th scope="col">Nom Entreprise</th>
-                  <th scope="col">Nom Encadrant</th>
-                  <th scope="col">Prénom Encadrant</th>
+                  <th scope="col">Company Name</th>
+                  <th scope="col">Supervisor First Name</th>
+                  <th scope="col">Supervisor Last Name</th>
                   <th scope="col">Email</th>
                   <th scope="col">Description</th>
-                  <th scope="col">Date Début Stage</th>
-                  <th scope="col">Date Fin Stage</th>
-                  <th scope="col">Durée (jours)</th>
+                  <th scope="col">Internship Start Date</th>
+                  <th scope="col">Internship End Date</th>
+                  <th scope="col">Duration (days)</th>
                   <th scope="col">Type</th>
                   <th scope="col">hashtags</th>
 
