--- a/src/app/pages/user/profile/EncadrantProfile/profile.component.html
+++ b/src/app/pages/user/profile/EncadrantProfile/profile.component.html
@@ -10,7 +10,7 @@
               <div class="col-7">
                 <div class="text-dark p-3">
                   <h5 class="text-dark">Welcome Back {{currentUser.lastName}} </h5>
-                  <p>It will seem like simplified</p>
+                  <p>This is your profile where you find all your personal data </p>
                 </div>
               </div>
               <div class="col-5 align-self-end">
@@ -23,7 +23,7 @@
               <div class="col-7">
                 <div class="text-dark p-3">
                   <h5 class="text-dark">Welcome Back {{currentUser.lastName}} </h5>
-                  <p>It will seem like simplified</p>
+                  <p>This is your profile where you find all your personal data</p>
                 </div>
               </div>
               <div class="col-5 align-self-end">
@@ -36,7 +36,7 @@
               <div class="col-7">
                 <div class="text-dark p-3">
                   <h5 class="text-dark">Welcome Back {{currentUser.lastName}} </h5>
-                  <p>It will seem like simplified</p>
+                  <p>This is your profile where you find all your personal data</p>
                 </div>
               </div>
               <div class="col-5 align-self-end">
@@ -49,7 +49,7 @@
               <div class="col-7">
                 <div class="text-dark p-3">
                   <h5 class="text-dark">Welcome Back {{currentUser.lastName}} </h5>
-                  <p>It will seem like simplified</p>
+                  <p>This is your profile where you find all your personal data</p>
                 </div>
               </div>
               <div class="col-5 align-self-end">
