Event&Historique&WebSocket

--- a/src/app/pages/event-scheduler/event-scheduler.component.html
+++ b/src/app/pages/event-scheduler/event-scheduler.component.html
@@ -2,4 +2,4 @@
 <full-calendar [options]="calendarOptions"></full-calendar>
 
 <!-- Bouton pour ouvrir la boîte de dialogue d'ajout d'événement -->
-<button mat-raised-button class="btn btn-danger mt-4" (click)="openCreateEventPopup()">Add Event</button>
+<button mat-raised-button class="btn btn-danger mt-4" (click)="openCreateEventPopup()">Ajouter un événement</button>
