--- a/src/app/pages/attestation/attestation.component.html
+++ b/src/app/pages/attestation/attestation.component.html
@@ -1,11 +1,6 @@
 <!-- Titre -->
 
-<!-- Boutons pour enregistrer -->
-<div style="text-align: center; margin-bottom: 20px;">
-  <button (click)="clearSignature()" class="btn btn-success">Effacer la signature</button>
-  <span style="margin: 0 5px;"></span> <!-- Espace entre les boutons -->
-  <button (click)="onSaveAttestation()" class="btn btn-primary">Enregistrer l'attestation</button>
-</div>
+
 
 
 <!-- Contenu à convertir en PDF -->
@@ -17,14 +12,14 @@
         <p style="font-size: 16px; text-align: center;">{{ currentDate }}</p>
         <h3 style="text-align: center;">Attestation de stage</h3>
 
-        <p style="font-size: 18px;">Nous soussignés, Nourhene Khemiri, attestons par la présente que, étudiant(e) en  à VERMEG, a effectué un stage au sein de notre entreprise du 25-01-2024 au 25-02-2024. Durant cette période, a démontré un haut niveau d'engagement, d'initiative et de professionnalisme dans l'accomplissement de ses missions. Ses compétences, sa capacité d'adaptation et son attitude positive ont grandement contribué à la réussite des projets auxquels il/elle a participé. Nous lui souhaitons plein succès dans la poursuite de ses études et dans sa carrière future.</p>
+        <p style="font-size: 18px;">Nous soussignés, Nourhene khemiri, attestons par la présente que, étudiant(e) en  à VERMEG, a effectué un stage au sein de notre entreprise du 25-01-2024 au 25-02-2024. Durant cette période, a démontré un haut niveau d'engagement, d'initiative et de professionnalisme dans l'accomplissement de ses missions. Ses compétences, sa capacité d'adaptation et son attitude positive ont grandement contribué à la réussite des projets auxquels il/elle a participé. Nous lui souhaitons plein succès dans la poursuite de ses études et dans sa carrière future.</p>
       </div>
       <canvas #signaturePad width="200" height="200" style="margin: 20px auto; display: block;"></canvas>
     </div>
   </div>
 </div>
-
-<!-- Affichage de la signature -->
-<div style="text-align: center;">
-  <img *ngIf="signatureImageSrc" [src]="signatureImageSrc" style="max-width: 100%; margin-top: 20px;" />
+<div style="text-align: center; margin-bottom: 20px;">
+  <button (click)="clearSignature()" class="btn btn-success">Effacer la signature</button>
+  <span style="margin: 0 5px;"></span> <!-- Espace entre les boutons -->
+  <button (click)="onSaveAttestation()" class="btn btn-primary">Enregistrer l'attestation</button>
 </div>
