--- a/src/app/pages/user/profile/change-password/change-password.component.html
+++ b/src/app/pages/user/profile/change-password/change-password.component.html
@@ -53,7 +53,7 @@
                         <div class="row justify-content-end">
                             <div class="col-sm-9">
                                 <div>
-                                    <button  class="btn btn-danger w-md">Submit</button>
+                                    <button  class="btn btn-danger w-md">Change password</button>
                                 </div>
                             </div>
                         </div>
